# rocket-jwt-roles-demo

./: Cargo.toml  README.md
migrations/20170115180553_users/: up.sql
src/: main.rs  models.rs
static/: login.html
templates/: index.html.hbs
templates/admin/: console.html.hbs  index.html.hbs
